Updated color variables

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,10 +1,10 @@
-$primary-blue: #23559b;
-$secondary-blue: #4ca1cf;
+$primary-blue: #0054a0;
+$secondary-blue: #0da2d4;
 
 $light-font: 100;
 $normal-font: 400;
 $semibold-font: 600;
 
 //these two variables control the background color and text color for nav
-$menuColor: #4ca1cf;
+$menuColor: #0da2d4;
 $menuTextColor: rgba(255,255,255,0.9);
