--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@ body {
 /*----------- HEADER --------------*/
 .headerWrapper {
   width: 100%;
-  background-color: #23559b; }
+  background-color: #0054a0; }
 
 header {
   padding: .5rem 2%;
@@ -347,7 +347,7 @@ header a {
 /*----------- NAVIGATION --------------*/
 .navWrapper {
   width: 100%;
-  background-color: #4ca1cf; }
+  background-color: #0da2d4; }
 
 nav ul li.active a {
   text-decoration: underline; }
@@ -364,7 +364,7 @@ main h1 {
 
 /*----------- FOOTER --------------*/
 footer {
-  background-color: #23559b;
+  background-color: #0054a0;
   color: #fff;
   padding: .5rem 2%;
   text-align: center; }
@@ -396,7 +396,7 @@ footer a:visited {
   nav {
     width: 100%;
     height: 2.75rem;
-    background-color: #4ca1cf; }
+    background-color: #0da2d4; }
 
   #hamburgerBtn {
     display: block;
@@ -428,7 +428,7 @@ footer a:visited {
     height: 0;
     overflow: hidden;
     width: 20rem;
-    background-color: #4ca1cf;
+    background-color: #0da2d4;
     margin: 0;
     padding: 0;
     position: absolute;
@@ -479,7 +479,7 @@ footer a:visited {
 
   /*----------- NAVIGATION --------------*/
   nav {
-    background-color: #4ca1cf; }
+    background-color: #0da2d4; }
     nav ul {
       margin: 0 0 0 2vw;
       padding: 0; }
@@ -497,7 +497,7 @@ footer a:visited {
       -webkit-transition: background 0.3s linear;
       transition: background 0.3s linear; }
     nav ul li a:hover {
-      background: #2c79a3; }
+      background: #096b8c; }
     nav #primaryNav li.parent > a::after {
       font-size: .75rem;
       content: "\25BC";
@@ -505,7 +505,7 @@ footer a:visited {
     nav ul li ul {
       z-index: 998;
       position: absolute;
-      background-color: #409bcc;
+      background-color: #0c97c6;
       left: -999em;
       /* pushes the menu way off to the side */
       width: 12em; }
