Changed dropdown menu arrow color

--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -45,7 +45,7 @@ nav {
 	#primaryNav li.parent > a::after {
         font-size: .75rem;
 		content: "\25BC";
-		color: rgba(255,255,255,.5);
+		color: rgb(255,255,255);
 	}
     
 //rules for the sub menu items
