--- a/css/styles.css
+++ b/css/styles.css
@@ -501,7 +501,7 @@ footer a:visited {
     nav #primaryNav li.parent > a::after {
       font-size: .75rem;
       content: "\25BC";
-      color: rgba(255, 255, 255, 0.5); }
+      color: white; }
     nav ul li ul {
       z-index: 998;
       position: absolute;
