--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -8,7 +8,9 @@ header, nav, main {
 
 
 /*----------- HEADER --------------*/
-
+header a {
+        margin-right: 0;
+}
 
 
 /*----------- NAVIGATION --------------*/
