--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -29,23 +29,49 @@ header img {
     height: 75px;
 }
 header a {
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    color: #fff;
-    font-size: 1.5rem;
-    margin: 0 0 .5rem 0;
-    text-decoration: none;
+    display: none;
 }
 
 
 /*----------- NAVIGATION --------------*/
 .navWrapper {
+    position: relative;
     width: 100%;
     background-color: $secondary-blue;
 }
 nav ul li.active a {
     text-decoration: underline;
+}
+.searchBar {
+    max-width: 175px;
+    max-height: 35px;
+    position: absolute;
+    top: .5rem;
+    right: .5rem;
+    float: right;
+    background-color: #fff;
+    border: none;
+}
+.searchBar input {
+    border: none;
+    padding: 4px 0 4px 4px;
+}
+.searchBar button {
+    position: absolute;
+    top: 0;
+    right: 0;
+    max-height: 35px;
+    float: right;
+    border: none;
+    padding: 4px 7.5px;
+    margin-right: 0;
+    background-color: $primary-blue;
+    color: #fff;
+    cursor: pointer;
+}
+.searchBar button:hover {
+    background-color: lighten($primary-blue, 10%);
+    transition: background 0.3s linear;
 }
 
 
