--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,6 +6,9 @@
 
 @import "mobileMenu";
 
+@import "../slick/slick-theme";
+@import "../slick/slick";
+
 @media only screen and (min-width: 35rem) {
     @import "medium";
 } /* end of media query */
