--- a/css/styles.css
+++ b/css/styles.css
@@ -381,7 +381,7 @@ nav ul li.active a {
 
 /*----------- MAIN --------------*/
 main {
-  padding: 0 2%;
+  padding: 0;
   min-height: 10rem;
   z-index: 1; }
 
