--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -77,7 +77,7 @@ nav ul li.active a {
 
 /*----------- MAIN --------------*/
 main {
-    padding: 0 2%;
+    padding: 0;
     min-height: 10rem;
     z-index: 1;
 }
