--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -8,6 +8,9 @@ header, nav, main {
 
 
 /*----------- HEADER --------------*/
+header {
+        padding: .5rem 0;
+}
 header a {
         margin-right: 0;
 }
