--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -27,7 +27,7 @@ nav {
 
 // add space to the left to match the other left side elements DESIGN: Alignment
     ul {
-        margin: 0 0 0 2vw; 
+        margin: 0; 
         padding: 0;
     }
 //Change to a horizontal menu bar
