--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,8 @@
 
 @import "mobileMenu";
 
-
+@import "../slick/slick-theme";
+@import "../slick/slick";
 
 @media only screen and (min-width: 35rem) {
     @import "medium";
