--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -22,7 +22,22 @@ header a {
 
 
 /*----------- MAIN --------------*/
-
+.blogHeader {
+        margin: 2rem 1rem 0 0;
+}
+#blogDiv {
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 14px;
+	font-size: 1rem;
+        margin: 1rem 0 3rem 0;
+}
+.blogArticle {
+	width: 290px;
+	height: 290px;
+}
+.roomArticle {
+	margin-top: 0;
+}
 
 
 /*----------- FORM --------------*/
