--- a/css/styles.css
+++ b/css/styles.css
@@ -402,7 +402,7 @@ picture img {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 10px;
-  margin: 1rem .5rem;
+  margin: 1rem .5rem 2rem .5rem;
   font-size: .8rem; }
 
 #blogDiv a {
@@ -455,6 +455,51 @@ picture img {
   position: absolute;
   bottom: 0;
   width: 100%; }
+
+#infoFooterWrapper {
+  width: 100%;
+  background-color: #0da2d4; }
+
+#infoFooter {
+  color: #fff;
+  padding: 1rem .5rem; }
+
+#infoFooter h3 {
+  margin-bottom: .5rem; }
+
+#infoFooter p {
+  margin-top: 0; }
+
+.column1 {
+  margin-bottom: 1rem; }
+
+.column1 a {
+  text-decoration: none;
+  color: #fff; }
+
+.column1 a:hover {
+  text-decoration: underline; }
+
+.column2 {
+  margin-bottom: 2rem; }
+
+.column2 form {
+  display: flex;
+  flex-direction: column; }
+
+.column2 form input {
+  padding: .75rem;
+  margin-bottom: 1rem;
+  border: none; }
+
+.column2 form button {
+  padding: .75rem;
+  background-color: #333;
+  color: #fff;
+  border: none; }
+
+.column2 form button:hover {
+  cursor: pointer; }
 
 /*----------- FOOTER --------------*/
 footer {
@@ -848,10 +893,20 @@ footer a:visited {
   .roomArticle {
     margin-top: 10px; }
 
+  #infoFooter {
+    display: grid;
+    grid-template-columns: 1fr 1fr; }
+
+  .column2 {
+    width: 80%; }
+
+  .column3 {
+    grid-column: 1 / span 2; }
+
   /*----------- FOOTER --------------*/ }
 /* end of media query */
 @media only screen and (min-width: 75rem) {
-  header, nav, main {
+  header, nav, main, #infoFooter {
     max-width: 75rem;
     margin: auto; }
 
@@ -880,6 +935,13 @@ footer a:visited {
 
   .roomArticle {
     margin-top: 0; }
+
+  #infoFooter {
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 1rem 0; }
+
+  .column3 {
+    grid-column: 3; }
 
   /*----------- FORM --------------*/
   /*----------- FOOTER --------------*/ }
