--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -93,6 +93,7 @@ picture img {
     width: 100%;
 }
 
+// Blog Article Styles
 .blogHeader {
     margin: 3rem 0 0 .5rem;
 }
@@ -100,7 +101,7 @@ picture img {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
-    margin: 1rem .5rem;
+    margin: 1rem .5rem 2rem .5rem;
     font-size: .8rem;
 }
 #blogDiv a {
@@ -156,6 +157,53 @@ picture img {
     position: absolute;
     bottom: 0;
     width: 100%;
+}
+
+// Info Footer Styles
+#infoFooterWrapper {
+    width: 100%;
+    background-color: $secondary-blue;
+}
+#infoFooter {
+    color: #fff;
+    padding: 1rem .5rem;
+}
+#infoFooter h3 {
+    margin-bottom: .5rem;
+}
+#infoFooter p {
+    margin-top: 0;
+}
+.column1 {
+    margin-bottom: 1rem;
+}
+.column1 a {
+    text-decoration: none;
+    color: #fff;
+}
+.column1 a:hover {
+    text-decoration: underline;
+}
+.column2 {
+    margin-bottom: 2rem;
+}
+.column2 form {
+    display: flex;
+    flex-direction: column;
+}
+.column2 form input {
+    padding: .75rem;
+    margin-bottom: 1rem;
+    border: none;
+}
+.column2 form button {
+    padding: .75rem;
+    background-color: $accent;
+    color: #fff;
+    border: none;
+}
+.column2 form button:hover {
+    cursor: pointer;
 }
 
 
