--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -43,6 +43,9 @@ header a {
         grid-template-columns: 1fr 1fr 1fr;
         padding: 1rem 0;
 }
+.column2 {
+        width: 92.5%;
+}
 .column3 {
         grid-column: 3;
 }
