--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -83,7 +83,8 @@ nav {
 }
 
 .searchBar {
-	position: relative;
+	position: absolute;
+	right: 0;
 	margin-right: 0;
 	max-width: 250px;
 	width: 180px;
