Fixed search bar

--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -17,7 +17,12 @@ header a {
 
 
 /*----------- NAVIGATION --------------*/
-
+nav {
+        position: relative;
+}
+.searchBar {
+        margin-right: 0;
+}
 
 
 
