--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -85,7 +85,7 @@ nav {
 .searchBar {
 	position: absolute;
 	right: 0;
-	margin-right: 0;
+	margin-right: .5rem;
 	max-width: 250px;
 	width: 180px;
 }
