--- a/css/styles.css
+++ b/css/styles.css
@@ -890,7 +890,7 @@ footer a:visited {
   .searchBar {
     position: absolute;
     right: 0;
-    margin-right: 0;
+    margin-right: .5rem;
     max-width: 250px;
     width: 180px; }
 
@@ -936,6 +936,12 @@ footer a:visited {
     margin-right: 0; }
 
   /*----------- NAVIGATION --------------*/
+  nav {
+    position: relative; }
+
+  .searchBar {
+    margin-right: 0; }
+
   /*----------- MAIN --------------*/
   .blogHeader {
     margin: 2rem 1rem 0 0; }
