Added google font

--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ html {
 /*----------- BODY --------------*/
 body {
   font-size: 16px;
-  font-family: 'Poppins', Verdana, sans-serif; }
+  font-family: 'Open Sans', Verdana, sans-serif; }
 
 /*----------- HEADER --------------*/
 .headerWrapper {
