Removed nav active class from css

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -40,7 +40,7 @@ header a {
     background-color: $secondary-blue;
 }
 nav ul li.active a {
-    text-decoration: underline;
+    // text-decoration: underline;
 }
 .searchBar {
     max-height: 35px;
