Commented out nav active class in small.scss

--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -39,9 +39,9 @@ header a {
     width: 100%;
     background-color: $secondary-blue;
 }
-nav ul li.active a {
-    // text-decoration: underline;
-}
+// nav ul li.active a {
+//     text-decoration: underline;
+// }
 .searchBar {
     max-height: 35px;
     position: absolute;
