--- a/css/styles.css
+++ b/css/styles.css
@@ -345,7 +345,7 @@ header a {
   width: 100%;
   background-color: #0da2d4; }
 
-nav ul li.active a {
+.activeLink {
   text-decoration: underline; }
 
 .searchBar {
@@ -392,6 +392,7 @@ picture {
 picture img {
   width: 100%; }
 
+/*----------- Home Page --------------*/
 .blogHeader {
   margin: 3rem 0 0 .5rem; }
 
@@ -453,6 +454,36 @@ picture img {
   bottom: 0;
   width: 100%; }
 
+/*----------- Cruises Page --------------*/
+h2.cruisesHeader {
+  margin: 1rem 0 1rem .5rem; }
+
+#cruisesDiv {
+  margin: 1rem .5rem 2rem .5rem; }
+
+.cruiseOption h3 {
+  margin-bottom: .5rem; }
+
+.cruiseOption p {
+  line-height: 1.5rem;
+  margin-top: 0; }
+
+.cruiseDescription a {
+  text-decoration: none;
+  cursor: pointer; }
+
+.cruiseDescription a button {
+  cursor: pointer;
+  background-color: #0054a0;
+  color: #fff;
+  padding: .5rem 2rem;
+  border: none; }
+
+.cruiseDescription a button:hover {
+  background-color: #333;
+  transition: background .4s; }
+
+/*----------- FOOTER --------------*/
 #infoFooterWrapper {
   width: 100%;
   background-color: #0da2d4; }
@@ -514,7 +545,6 @@ picture img {
   cursor: pointer;
   transform: scale(1.1); }
 
-/*----------- FOOTER --------------*/
 footer {
   background-color: #0054a0;
   color: #fff;
@@ -895,6 +925,7 @@ footer a:visited {
     width: 180px; }
 
   /*----------- MAIN --------------*/
+  /*----------- Home Page --------------*/
   #blogDiv {
     grid-template-columns: 1fr 1fr 1fr;
     font-size: .9rem;
@@ -907,6 +938,22 @@ footer a:visited {
   .roomArticle {
     margin-top: 10px; }
 
+  /*----------- Cruises Page --------------*/
+  .cruiseOption {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr; }
+
+  .cruiseOption h3 {
+    margin-top: 0; }
+
+  .cruiseDescription {
+    grid-column: 2 / span 2; }
+
+  .cruiseDescription a {
+    display: flex;
+    justify-content: flex-end; }
+
+  /*----------- FOOTER --------------*/
   #infoFooter {
     display: grid;
     grid-template-columns: 1fr 1fr; }
@@ -918,9 +965,7 @@ footer a:visited {
     grid-column: 1 / span 2; }
 
   #socialBar i {
-    padding: 0 1rem; }
-
-  /*----------- FOOTER --------------*/ }
+    padding: 0 1rem; } }
 /* end of media query */
 @media only screen and (min-width: 75rem) {
   header, nav, main, #infoFooter {
@@ -943,6 +988,7 @@ footer a:visited {
     margin-right: 0; }
 
   /*----------- MAIN --------------*/
+  /*----------- Home Page --------------*/
   .blogHeader {
     margin: 2rem 1rem 0 0; }
 
@@ -969,6 +1015,7 @@ footer a:visited {
   .column3 {
     grid-column: 3; }
 
+  /*----------- Cruises Page --------------*/
   /*----------- FORM --------------*/
   /*----------- FOOTER --------------*/ }
 /* end of media query */
