--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -27,6 +27,7 @@ nav {
 
 
 /*----------- MAIN --------------*/
+/*----------- Home Page --------------*/
 .blogHeader {
         margin: 2rem 1rem 0 0;
 }
@@ -54,6 +55,9 @@ nav {
 .column3 {
         grid-column: 3;
 }
+
+/*----------- Cruises Page --------------*/
+
 
 
 /*----------- FORM --------------*/
