--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -59,7 +59,6 @@ header a {
     top: 0;
     right: 0;
     max-height: 35px;
-    // float: right;
     border: none;
     padding: 4px 7.5px;
     margin-right: 0;
@@ -91,6 +90,7 @@ picture img {
     width: 100%;
 }
 
+/*----------- Home Page --------------*/
 // Blog Article Styles
 .blogHeader {
     margin: 3rem 0 0 .5rem;
@@ -157,6 +157,39 @@ picture img {
     width: 100%;
 }
 
+
+/*----------- Cruises Page --------------*/
+h2.cruisesHeader {
+    margin: 1rem 0 1rem .5rem;
+}
+#cruisesDiv {
+    margin: 1rem .5rem 2rem .5rem;
+}
+.cruiseOption h3 {
+    margin-bottom: .5rem;
+}
+.cruiseOption p {
+    line-height: 1.5rem;
+    margin-top: 0;
+}
+.cruiseDescription a {
+    text-decoration: none;
+    cursor: pointer;
+}
+.cruiseDescription a button {
+    cursor: pointer;
+    background-color: $primary-blue;
+    color: #fff;
+    padding: .5rem 2rem;
+    border: none;
+}
+.cruiseDescription a button:hover {
+    background-color: $accent;
+    transition: background .4s;
+}
+
+
+/*----------- FOOTER --------------*/
 // Info Footer Styles
 #infoFooterWrapper {
     width: 100%;
@@ -222,7 +255,7 @@ picture img {
     transform: scale(1.1);
 }
 
-/*----------- FOOTER --------------*/
+
 footer {
     background-color: $primary-blue;
     color: #fff;
