--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -160,17 +160,23 @@ picture img {
 
 /*----------- Cruises Page --------------*/
 h2.cruisesHeader {
-    margin: 1rem 0 1rem .5rem;
+    margin: 1rem 0 0 .5rem;
 }
 #cruisesDiv {
     margin: 1rem .5rem 2rem .5rem;
 }
+.cruiseOption {
+    margin-top: 1.5rem;
+}
 .cruiseOption h3 {
     margin-bottom: .5rem;
 }
+.cruiseOption img {
+    width: 100%;
+}
 .cruiseOption p {
     line-height: 1.5rem;
-    margin-top: 0;
+    margin: 0 0 .5rem 0;
 }
 .cruiseDescription a {
     text-decoration: none;
@@ -182,6 +188,7 @@ h2.cruisesHeader {
     color: #fff;
     padding: .5rem 2rem;
     border: none;
+    width: 100%;
 }
 .cruiseDescription a button:hover {
     background-color: $accent;
