--- a/scss/_large.scss
+++ b/scss/_large.scss
@@ -59,6 +59,14 @@ nav {
 /*----------- Cruises Page --------------*/
 
 
+/*----------- Agent Pages --------------*/
+.agentHeader {
+	margin: 1rem 0 0 0;
+}
+.agentDiv {
+        margin: 0;
+}
+
 
 /*----------- FORM --------------*/
 
