--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -133,6 +133,22 @@ nav {
 }
 
 
+/*----------- Agent Pages --------------*/
+
+.agentDiv {
+	margin: 1rem .5rem;
+}
+.agentImage {
+	float: right;
+	margin: 0 0 .5rem .5rem;
+	width: auto;
+}
+.agentImage img {
+	height: 400px;
+	width: auto;
+}
+
+
 /*----------- FOOTER --------------*/
  // Info Footer Styles
 #infoFooter {
