--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -196,6 +196,26 @@ h2.cruisesHeader {
 }
 
 
+/*----------- Agent Pages --------------*/
+.agentHeader {
+    margin: 1rem 0 1rem .5rem;
+}
+.agentDiv {
+    margin: 0 .5rem;
+}
+.agentImage {
+    width: 100%;
+}
+.agentImage img {
+    width: 100%;
+}
+.agentDiv h4 {
+    margin-bottom: 0;
+}
+.agentDiv p {
+    margin-top: .25rem;
+}
+
 /*----------- FOOTER --------------*/
 // Info Footer Styles
 #infoFooterWrapper {
