--- a/scss/_medium.scss
+++ b/scss/_medium.scss
@@ -148,6 +148,14 @@ nav {
 	width: auto;
 }
 
+/*----------- Book a Cruise Page --------------*/
+form label.topLabel input, form label.topLabel select {
+	width: 60%;
+}
+#bookBtn {
+	width: 60%;
+}
+
 
 /*----------- FOOTER --------------*/
  // Info Footer Styles
