--- a/css/styles.css
+++ b/css/styles.css
@@ -509,6 +509,47 @@ h2.cruisesHeader {
 .agentDiv p {
   margin-top: .25rem; }
 
+/*----------- Book a Cruise Page --------------*/
+.bookingHeader {
+  margin: 1rem 0 0 .5rem; }
+
+#formContainer {
+  margin: 1rem .5rem; }
+
+form label.topLabel {
+  display: block;
+  font-size: .8rem;
+  margin: 0;
+  padding: 1rem 0 0 0; }
+
+form label.topLabel input, form label.topLabel select {
+  display: block;
+  font-size: 1rem;
+  margin: .25rem 0 .5rem 0;
+  padding: .75rem;
+  border: 1px solid transparent;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%; }
+
+form label.topLabel input:required {
+  border-left: 5px solid red; }
+
+form label.topLabel input:required:valid {
+  border-left: 5px solid #0da2d4; }
+
+#bookBtn {
+  margin: 1rem 0;
+  cursor: pointer;
+  background-color: #0054a0;
+  color: #fff;
+  padding: .75rem 2rem;
+  border: none;
+  width: 100%; }
+
+#bookBtn:hover {
+  background-color: #333;
+  transition: background .4s; }
+
 /*----------- FOOTER --------------*/
 #infoFooterWrapper {
   width: 100%;
@@ -1000,6 +1041,13 @@ footer a:visited {
     height: 400px;
     width: auto; }
 
+  /*----------- Book a Cruise Page --------------*/
+  form label.topLabel input, form label.topLabel select {
+    width: 60%; }
+
+  #bookBtn {
+    width: 60%; }
+
   /*----------- FOOTER --------------*/
   #infoFooter {
     display: grid;
@@ -1064,11 +1112,24 @@ footer a:visited {
 
   /*----------- Cruises Page --------------*/
   /*----------- Agent Pages --------------*/
+  .bookingHeader {
+    margin: 1rem 0 0 0; }
+
+  #formContainer {
+    margin: 1rem 0; }
+
   .agentHeader {
     margin: 1rem 0 0 0; }
 
   .agentDiv {
     margin: 0; }
+
+  /*----------- Book a Cruise Page --------------*/
+  form label.topLabel input, form label.topLabel select {
+    width: 35%; }
+
+  #bookBtn {
+    width: 35%; }
 
   /*----------- FORM --------------*/
   /*----------- FOOTER --------------*/ }
