--- a/scss/_small.scss
+++ b/scss/_small.scss
@@ -216,6 +216,50 @@ h2.cruisesHeader {
     margin-top: .25rem;
 }
 
+
+/*----------- Book a Cruise Page --------------*/
+.bookingHeader {
+    margin: 1rem 0 0 .5rem;
+}
+#formContainer {
+    margin: 1rem .5rem;
+}
+form label.topLabel {
+    display: block;
+    font-size: .8rem;
+    margin: 0;
+    padding: 1rem 0 0 0;
+}
+form label.topLabel input, form label.topLabel select {
+    display: block;
+    font-size: 1rem;
+    margin: .25rem 0 .5rem 0;
+    padding: .75rem;
+    border: 1px solid transparent;
+    background-color: rgba($color: #000000, $alpha: 0.1);;
+    width: 100%;
+}
+form label.topLabel input:required {
+    border-left: 5px solid red;
+}
+form label.topLabel input:required:valid {
+    border-left: 5px solid $secondary-blue;
+}
+#bookBtn {
+    margin: 1rem 0;
+    cursor: pointer;
+    background-color: $primary-blue;
+    color: #fff;
+    padding: .75rem 2rem;
+    border: none;
+    width: 100%;
+}
+#bookBtn:hover {
+    background-color: $accent;
+    transition: background .4s;
+}
+
+
 /*----------- FOOTER --------------*/
 // Info Footer Styles
 #infoFooterWrapper {
